# text_service

./: .gitattributes  Dockerfile  Makefile  README.md  app.py  dockerStart.sh  package-lock.json  proxy.js  pyproject.toml  required_classes.py  requirements.txt  server.py
