[tool.poetry]
name = "icd10_docker"
version = "0.1.0"
description = ""
authors = ["lyangasovid <lyangasovid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.22.4"
scikit-learn = "1.3.0"
transformers = "4.29.2"
flask = "2.0.3"
xgboost = "1.7.6"
werkzeug = "2.2.2"
torch = {url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.0.1%2Bcpu.cxx11.abi-cp38-cp38-linux_x86_64.whl#sha256=fbe35a5c60aef0c4b5463caab10ba905bdfa07d6d16b7be5d510225c966a0b46"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
